README.md file updated

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <br>
     <div id="btn">
 <!-- Runs on app.js gameReset function located on line #173 -->
-        <input onclick="gameReset()" type="button" value="Start Over">
+        <input onclick="gameReset()" type="button" value="Choose Character">
     </div>
 
 
